examples/test/testpolicy19520.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19520
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key42: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value5
          key15: value12
      podSelector:
        matchLabels:
          key48: value13
          key22: value1
